Chatroom: Fix repository chat user menu links don't work on mobile devices (Mantis issue 30573)
(cherry picked from commit fc1fc4f259513ae0a0e9c1c17d2c20a5c3f5b3f3)

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -16227,6 +16227,9 @@ td.chatroom {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+.ilChatroomUser .dropdown-backdrop {
+  position: static;
+}
 .ilChatroomUser .media {
   padding: 0;
 }
